# pageserve

./: .gitignore  README.md  pyproject.toml  test_mcp.py
.github/workflows/: publish.yml  test.yml
docs/: async-client.md  authentication.md  cli.md  error-handling.md  getting-started.md  mcp-server.md  models.md  streaming.md  sync-client.md
pageserve/: __init__.py  _async_client.py  _auth.py  _client.py  _exceptions.py  _models.py  _sse.py
pageserve/cli/: __init__.py  _commands.py
pageserve/mcp/: __init__.py  _server.py
tests/: conftest.py  test_async_client.py  test_auth.py  test_client.py  test_exceptions.py  test_models.py  test_sse.py
