[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "pageserve"
version     = "0.1.1"
description = "Python SDK and MCP server for self-hosted PageIndex RAG service"
readme      = "README.md"
license     = {text = "Apache-2.0"}
requires-python = ">=3.10"

authors = [
  {name = "pageserve", email = "pageserve03@gmail.com"},
]

keywords = [
  "pageindex", "rag", "llm", "document-ai",
  "mcp", "self-host", "vector-free",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core deps — chỉ những thứ bắt buộc
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
# MCP server
mcp = ["mcp>=1.9.4"]

# CLI
cli = ["click>=8.0"]

# Tất cả
all = ["pageserve[mcp,cli]"]

# Dev deps
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "pytest-cov",
  "hatch",
  "ruff",
  "mypy",
]

[project.scripts]
pageserve = "pageserve.cli:main"

[project.urls]
Homepage      = "https://github.com/pageserve/pageserve"
Repository    = "https://github.com/pageserve/pageserve"
Issues        = "https://github.com/pageserve/pageserve/issues"
Documentation = "https://github.com/pageserve/pageserve#readme"

#Hatch build config
[tool.hatch.build.targets.wheel]
packages = ["pageserve"]

[tool.hatch.build.targets.sdist]
exclude = [
  "tests/",
  ".github/",
  "*.md",
]

#Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

#Ruff (linting)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

#Mypy
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
